@@ -242,6 +242,10 @@ lexi (void)
 	  enum codes value;
 
 	found_keyword:
+#ifdef DEBUG
+	  if (debug)
+	    printf("keyword \"%.*s\"\n", token_len, token);
+#endif
 	  value = ident;
 	  parser_state_tos->its_a_keyword = true;
 	  parser_state_tos->last_u_d = true;
